[fixed] h1 looking off on Safari

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,7 +24,7 @@ p {
 
 h1 {
   font-family: ballet;
-  font-size: 3em;
+  font-size: 1.2em;
   margin: 40px auto 0 auto;
 }
 
